feat: dynamic credentials
